added images and descriptions for the robots

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="bento-section wide" style="display: table">
             <!--height so hoch dass es im Kasten zentriert ausschaut-->
             <!--border-radius macht die runden Ecken (50% wäre ein Kreis)-->
-            <img src="./WLS_Robotics.jpeg" height="220px" style="float: left; padding: 10px; border-radius: 30%">
+            <img src="./Images/WLS_Robotics.jpeg" height="220px" style="float: left; padding: 10px; border-radius: 30%">
             <h1 style="float: left; font-size: 4em; padding-left: 25px; margin-top: 40px; margin-bottom: 0">WLS<br>Robotics</h1>
         </section>
 
@@ -36,22 +36,30 @@
         <section class="bento-section"><h1>KA was hier hin kommt</h1></section>
 
         <section class="bento-section">
-            <p>This is Zyklop, our initial robot. It was our first real
-            experience with ROS and professional robotics.<br><br>Zyklop is great at navigating rough terrain but has a
-            deficit of sensors.</p>
+            <div style="text-align: center;">
+                <img src="./Images/zyklop.jpg" height="90%" width="90%" style="border-radius: 10px">
+            </div>
+            <div style="text-align: center;">
+                <p><b>Zyklop</b>, unser erster Roboter</p>
+            </div>
         </section>
 
         <section class="bento-section">
-            <p>Bento-Box was the second addition to our robot family. It was be
-            used at the Robocup in Bordeaux.<br><br>We chose the name mostly so that we can call it the bento \'Box\',
-            but also because we presume it\'ll end up looking like a box, since this happened with Zyklop.</p>
+            <div style="text-align: center;">
+                <img src="./Images/zyklop.jpg" height="90%" width="90%" style="border-radius: 10px">
+            </div>
+            <div style="text-align: center;">
+                <p>Bento-Box</p>
+            </div>
         </section>
 
         <section class="bento-section">
-            <p>Bento-Box really struggles at climbing ledges and stairs. As
-            EduArt offered us new hardware, we decided to try out a flipper-based robot, naming it Schäufele.<br><br>We
-            are still learning how to make articulated tracks behave nicely, so Schäufele can be difficult at
-            times.</p>
+            <div style="text-align: center;">
+                <img src="./Images/Schaeufele.jpg" height="90%" width="90%" style="border-radius: 10px">
+            </div>
+            <div style="text-align: center;">
+                <p>Schäufele mit Flippern zum Treppensteigen</p>
+            </div>
         </section>
     </div>
 
