--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ showSlide(slideIndex);
 
         <section class="bento-section">
             <div style="text-align: center;">
-                <img src="./Images/zyklop.jpg"  width="90%" style="border-radius: 1rem">
+                <img src="./Images/Bento1.jpeg"  width="90%" style="border-radius: 1rem">
             </div>
             <div style="text-align: center; margin-top: 0rem;">
                 <p><b>Bento-Box</b></p>
